@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.3
 
 	- Documentation updates.
+	- The Fl_Preferences header file needed to FL_EXPORT all
+	  of the nested classes for WIN32.
 	- Fl_Double_Window couldn't be nested on WIN32. [SF Bug
 	  #658219]
 	- Fl_Slider didn't call the callback function when the
